0.3.0
=======
* Add Kotlin example (Thanks Pelle Almquist)

0.2.1
=======
* Fix typos and grammar errors all across the the documentation.
* Fix Python 3 support.
* Add tox environment for python 3 integration tests.
* Fix Lambda:role resource so it can be a reference/parameter.
* Make the apply command exit immediately if one of the steps fails.
* Added ``fail`` method to the node Mock
* Make it possible to use non-user temp credentials

0.2
====
* Add ``api_key_required`` to apigateway integration.
* Fix python3 support.
* Fix setup.py to correctly install gordon in all platforms.
* Fix bootstrap app creation

0.1
====
* Initial release